tests/paczka1/small_fuzzy/80424743.err
Error in line 2: HCArK18rMt S356 6,1
Error in line 5: HCArK18rMt A1 39,0
